CODES/PRACTICAL-9/2_Allow egress traffic from busybox.yaml
calicoctl create -f - <<EOF
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-busybox-egress
  namespace: advanced-policy-demo7
spec:
  selector: run == 'access'
  types:
    - Egress
  egress:
    - action: Allow
EOF
