CODES/PRACTICAL-9/3_Allow ingress traffic to nginx.yaml
calicoctl create -f - <<EOF
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-nginx-ingress
  namespace: advanced-policy-demo7
spec:
  selector: app == 'nginx'
  types:
    - Ingress
  ingress:
    - action: Allow
      source:
        selector: run == 'access'
EOF
